[gd_scene load_steps=2 format=3 uid="uid://d4k7qanx5qwls"]

[ext_resource type="Script" path="res://scenes/ui/screens/InventoryScreen.gd" id="1_inventory"]

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopSpacer" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HeaderContainer" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="MainVBox/HeaderContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SpacerLeft" type="Control" parent="MainVBox/HeaderContainer/TopBar"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Title" type="Label" parent="MainVBox/HeaderContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Envanter"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="SortButton" type="Button" parent="MainVBox/HeaderContainer/TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Sƒ±rala"

[node name="SpacerRight" type="Control" parent="MainVBox/HeaderContainer/TopBar"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="FilterScroll" type="ScrollContainer" parent="MainVBox/HeaderContainer"]
layout_mode = 2
vertical_scroll_mode = 0
horizontal_scroll_mode = 3

[node name="FilterBar" type="HBoxContainer" parent="MainVBox/HeaderContainer/FilterScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SpaceL" type="Control" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="AllButton" type="Button" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Hepsi"

[node name="WeaponButton" type="Button" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "Silah"

[node name="ArmorButton" type="Button" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "Zƒ±rh"

[node name="PotionButton" type="Button" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "ƒ∞ksir"

[node name="MaterialButton" type="Button" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "Materyal"

[node name="SpaceR" type="Control" parent="MainVBox/HeaderContainer/FilterScroll/FilterBar"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ContentArea" type="ScrollContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="MainVBox/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="TrashSlotContainer" type="CenterContainer" parent="MainVBox/ContentArea/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TrashLabel" type="Label" parent="MainVBox/ContentArea/VBox/TrashSlotContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "üóëÔ∏è √á√∂p Kutusu (Silmek i√ßin buraya s√ºr√ºkleyin)"

[node name="EquippedLabel" type="Label" parent="MainVBox/ContentArea/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
text = "  Ku≈üanƒ±lan Ekipmanlar"

[node name="EquippedScroll" type="ScrollContainer" parent="MainVBox/ContentArea/VBox"]
layout_mode = 2
vertical_scroll_mode = 0
horizontal_scroll_mode = 3

[node name="EquippedContainer" type="HBoxContainer" parent="MainVBox/ContentArea/VBox/EquippedScroll"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="InventoryLabel" type="Label" parent="MainVBox/ContentArea/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  √ñƒüeler"

[node name="InventoryGridContainer" type="CenterContainer" parent="MainVBox/ContentArea/VBox"]
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="MainVBox/ContentArea/VBox/InventoryGridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="BottomSpacer" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ItemDetailsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="DetailsVBox" type="VBoxContainer" parent="ItemDetailsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="ItemDetailsPanel/DetailsVBox"]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="ItemDetailsPanel/DetailsVBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Item Name"

[node name="CloseDetailsButton" type="Button" parent="ItemDetailsPanel/DetailsVBox/Header"]
layout_mode = 2
text = "X"

[node name="ItemDescriptionLabel" type="Label" parent="ItemDetailsPanel/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Description goes here..."
autowrap_mode = 2

[node name="ItemStatsLabel" type="Label" parent="ItemDetailsPanel/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Stats..."

[node name="ActionButtons" type="HBoxContainer" parent="ItemDetailsPanel/DetailsVBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="UseButton" type="Button" parent="ItemDetailsPanel/DetailsVBox/ActionButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Kullan"

[node name="EquipButton" type="Button" parent="ItemDetailsPanel/DetailsVBox/ActionButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Ku≈üan"

[node name="SellButton" type="Button" parent="ItemDetailsPanel/DetailsVBox/ActionButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Sat"